<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, threebookActivity!</string>
    <string name="app_name">3book</string>
    <string name="my_collection">My Collection</string>
    <string name="view_image">View image</string>
    <string name="preferences">Preferences</string>
    <string name="favourites">Favourites</string>
    <string name="open_import">Open/Import</string>
    <string name="settings">Settings</string>
    <string name="parent_directory">Parent folder</string>
    <string name="scan">Scan</string>
    <string name="current_path">Current path: </string>
    <string name="books">Books</string>
    <string name="authors">Authors</string>
    <string name="tags">Tags</string>
    <string name="bookmark">Bookmark</string>
    <string name="more">More</string>
    <string name="day_night_mode">Day/Night mode</string>
    <string name="loading_please_wait">Loading. Please wait…</string>
    <string name="table_of_contents">Table of contents</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>
    <string name="select_text">Select text</string>
    <string name="image">Image</string>
    <string name="select_text_description">Start draging from where you would like to select your text</string>

    <!-- COMMON -->
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="view">View</string>

    <!-- ERRORS -->
    <string name="err_general">Error</string>
    <string name="err_file_browser_general">Unable to access file/folder</string>
    <string name="err_image">Unable to open image</string>
    <string name="err_render_page">Could not render page!</string>

    <!-- SETTINGS -->
    <string name="reader_settings">Reader settings</string>
    <string name="adjust_margins">Adjust margins</string>
    <string name="adjust_margins_summary">Change left &amp; right page margin</string>
    <string name="font_size">Font size</string>
    <string name="font_size_summary">Adjust font size</string>
    <string name="background_color">Background color</string>
    <string name="background_color_summary">Change background color</string>
    <string name="dialog_margin_title">Edit margins</string>
    <string name="dialog_font_size_title">Edit font size</string>
    <string name="margin_top_bottom">Top &amp; Bottom margin</string>
    <string name="margin_leftr_right">Left &amp; Right margin</string>
    <string name="page_animation_speed">Animation speed</string>
    <string name="page_animation_speed_summary">Adjust the speed of page turn animations</string>

    <!-- MENU -->
    <string name="menu_refresh">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
    <string name="control_next_chapter">Next</string>
    <string name="control_prev_chapter">Prev</string>
    <string name="control_display_toc">TOC</string>
    <string name="application">Application</string>
    <string name="open_at_startup">Open at startup</string>
    <string name="open_at_startup_on">Opens the last read book when application starts</string>
    <string name="open_at_startup_off">Opens the main screen when application starts</string>
    <string name="open_book">Open</string>
    <string name="import_book">Import</string>

</resources>