<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_prevChapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/control_prev_chapter" />

        <Button
            android:id="@+id/btn_nextChapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/control_next_chapter" />

        <Button
            android:id="@+id/btn_displayToc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/control_display_toc" />

    </LinearLayout>

    <WebView
        android:id="@+id/web_webView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</LinearLayout>